# basic-system-information

./: .gitignore  PluginCreator.py  PluginLoader.py  README.md  bsi.py  bsi_eng.py  bsi_rus.py  build_debag_settings.json  build_release_settings.json  building.bat  config.json  main.py  plugins_config.json  pyproject.toml  reinstall.py  reinstall_bsipack.bat  requirements.txt  setup.py  start.bat
.github/workflows/: python-app.yml
bsi/: __init__.py  bsi.py  bsi.pyi  uix.py
bsi/plugin/: creator.py  creator.pyi  loader.py
bsipack/: __init__.py  bsi.py  bsi.pyi  plugincreator.py  plugincreator.pyi  pluginloader.py  uix.py
kivybsi/: objects.py
kivymore/: __init__.py  table.py  table.pyi
old_version/: PluginCreator.py  PluginLoader.py  bsi.py  build_debag_settings.json  build_release_settings.json  make_bsi.sh  plugins_config.json
old_version/kivymore/: Units.py  __init__.py  table.py  table.pyi
old_version/plugins/InternetLocker/: __init__.py  locker_config.json
old_version/plugins/InternetLocker/LockSwitch/: LockSwitch.py  LockSwitch.pyi  __init__.py
plugins/: PluginLoader.py
plugins/ExamplePlugin/: PluginCreator.py  __init__.py
plugins/RussianTranslatePlugin/: __init__.py
plugins/TopOn/: PluginCreator.py  __init__.py
plugins/_ExamplePlugin/: PluginCreator.py  __init__.py
