[tool.poetry]
name = "bsi"
version = "0.4.0"
description = "BSI packages."
authors = ["Romanin <semina054@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
kivy = ">=2.0.0"
kivymd = ">=1.0.0"
psutil = ">=5.9.6"
rich = ">=13.6.0"
pillow = ">=10.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
